--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Fetch
 
 on:
-  schedule:
-    - cron: "45 3 * * *"
+  # schedule:
+  #   - cron: "45 3 * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - pipeline
 
 jobs:
   fetch:
@@ -40,3 +43,12 @@ jobs:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
           QUEENS_CHAT_WEBHOOK: ${{ secrets.QUEENS_CHAT_WEBHOOK }}
         run: node fetch_queens.js test
+      
+      - name: Commit
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "dhruvkapoor.200@gmail.com"
+          git remote set-url origin "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+          git add .
+          git commit -m "[Github-Actions] updated latest version" || echo "No changes to commit"
+          git push origin HEAD:${{ github.ref }}
