--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -45,7 +45,7 @@ jobs:
         if: steps.install.outcome == 'success'
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
-          QUEENS_CHAT_WEBHOOK: ${{ secrets.ZIP_CHAT_WEBHOOK }}
+          ZIP_CHAT_WEBHOOK: ${{ secrets.ZIP_CHAT_WEBHOOK }}
         run: node fetch_zip.js
       
       - name: Commit
