--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -26,12 +26,23 @@ jobs:
         if: steps.setup.outcome == 'success'
         id: install
         run: npm install
+
+      - name: Fetch tango
+        if: steps.install.outcome == 'success'
+        env:
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
+          TANGO_CHAT_WEBHOOK: ${{ secrets.TANGO_CHAT_WEBHOOK }}
+          USE_COOKIES: ${{ vars.USE_COOKIES }}
+          COOKIES: ${{ secrets.COOKIES }}
+        run: node fetch_tango.js
       
       - name: Fetch queens
         if: steps.install.outcome == 'success'
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
           QUEENS_CHAT_WEBHOOK: ${{ secrets.QUEENS_CHAT_WEBHOOK }}
+          USE_COOKIES: ${{ vars.USE_COOKIES }}
+          COOKIES: ${{ secrets.COOKIES }}
         run: node fetch_queens.js
       
       - name: Fetch Zip
@@ -39,14 +50,9 @@ jobs:
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
           ZIP_CHAT_WEBHOOK: ${{ secrets.ZIP_CHAT_WEBHOOK }}
+          USE_COOKIES: ${{ vars.USE_COOKIES }}
+          COOKIES: ${{ secrets.COOKIES }}
         run: node fetch_zip.js
-      
-      - name: Fetch tango
-        if: steps.install.outcome == 'success'
-        env:
-          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
-          TANGO_CHAT_WEBHOOK: ${{ secrets.TANGO_CHAT_WEBHOOK }}
-        run: node fetch_tango.js
       
       - name: Commit
         id: commit
